--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Picture Web Vault</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,14 +65,20 @@
             top: 10px;
             right: 10px;
             cursor: pointer;
+            font-size: 24px;
+            color: var(--icon-color);
         }
         .dark-mode {
             --bg-color: #333;
             --text-color: #f5f5f5;
+            --icon-color: #f5f5f5;
+            background-color: #333;
+            color: #f5f5f5;
         }
         .light-mode {
             --bg-color: #f5f5f5;
             --text-color: #333;
+            --icon-color: #333;
         }
         .overlay {
             position: absolute;
@@ -85,7 +92,9 @@
     </style>
 </head>
 <body class="light-mode">
-    <div class="theme-switcher" onclick="toggleTheme()">Switch to Dark Mode</div>
+    <div class="theme-switcher" onclick="toggleTheme()">
+        <i id="theme-icon" class="fas fa-moon"></i> <!-- Font Awesome Moon Icon -->
+    </div>
     <div class="container">
         <h1>Digital Picture Web Vault</h1>
         <label for="imdb-id">Enter IMDB ID:</label>
@@ -105,6 +114,7 @@
     </div>
 
     <script>
+        // Function to load video and update URL
         function loadVideo() {
             const imdbId = document.getElementById('imdb-id').value;
             const videoContainer = document.getElementById('video-container');
@@ -115,60 +125,61 @@
                 videoEmbed.src = `https://www.2embed.cc/embed/${imdbId}`;
                 videoContainer.style.display = 'block';
                 overlay.style.display = 'none'; // Hide overlay to allow interaction
+
+                // Update URL with IMDB ID and current theme
+                const theme = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
+                history.replaceState(null, null, `?id=${imdbId}&theme=${theme}`);
             } else {
                 videoContainer.style.display = 'none';
                 overlay.style.display = 'block'; // Show overlay if no ID
             }
         }
 
+        // Function to toggle theme and update URL
         function toggleTheme() {
             const body = document.body;
-            const themeSwitcher = document.querySelector('.theme-switcher');
+            const themeIcon = document.getElementById('theme-icon');
             
             if (body.classList.contains('light-mode')) {
                 body.classList.remove('light-mode');
                 body.classList.add('dark-mode');
-                themeSwitcher.textContent = 'Switch to Light Mode';
+                themeIcon.classList.remove('fa-moon');
+                themeIcon.classList.add('fa-sun');
             } else {
                 body.classList.remove('dark-mode');
                 body.classList.add('light-mode');
-                themeSwitcher.textContent = 'Switch to Dark Mode';
+                themeIcon.classList.remove('fa-sun');
+                themeIcon.classList.add('fa-moon');
+            }
+
+            // Update URL with current theme
+            const imdbId = new URLSearchParams(window.location.search).get('id');
+            if (imdbId) {
+                history.replaceState(null, null, `?id=${imdbId}&theme=${body.classList.contains('dark-mode') ? 'dark' : 'light'}`);
             }
         }
 
-        // Function to monitor and close new tabs
-        (function() {
-            const openWindows = [];
+        // Function to apply theme and load video from URL parameters
+        function applySettingsFromURL() {
+            const params = new URLSearchParams(window.location.search);
+            const imdbId = params.get('id');
+            const theme = params.get('theme');
 
-            window.addEventListener('beforeunload', function() {
-                openWindows.forEach(win => {
-                    try {
-                        win.close();
-                    } catch (e) {
-                        // Ignore errors when closing windows
-                    }
-                });
-            });
+            if (theme === 'dark') {
+                document.body.classList.remove('light-mode');
+                document.body.classList.add('dark-mode');
+                document.getElementById('theme-icon').classList.remove('fa-moon');
+                document.getElementById('theme-icon').classList.add('fa-sun');
+            }
 
-            window.addEventListener('click', function(event) {
-                if (event.target.tagName === 'A') {
-                    event.preventDefault(); // Prevent opening new tabs
-                    event.stopImmediatePropagation(); // Stop other event listeners
-                    alert('Link clicks are blocked to prevent navigation.');
-                }
-            });
+            if (imdbId) {
+                document.getElementById('imdb-id').value = imdbId;
+                loadVideo(); // Load video based on IMDB ID from URL
+            }
+        }
 
-            // Optional: Monitor for newly opened windows/tabs
-            window.open = (function(originalOpen) {
-                return function(url, name, specs) {
-                    const win = originalOpen.call(window, url, name, specs);
-                    if (win) {
-                        openWindows.push(win);
-                    }
-                    return win;
-                };
-            })(window.open);
-        })();
+        // Apply settings on page load
+        window.onload = applySettingsFromURL;
     </script>
 </body>
 </html>
