--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
             <p>The IMDB ID is a unique identifier for movies on IMDB. It usually starts with 'tt' followed by a series of numbers. For example, the IMDB ID for the movie 'Inception' is 'tt1375666'.</p>
             <p>To find the IMDB ID, visit the IMDB website and search for the movie. Look at the URL of the movie's page; it will look something like this: <code>https://www.imdb.com/title/tt1234567/</code>. The part after '/title/' and before the next '/' is the IMDB ID you need.</p>
         </div>
+            <p>The DPWV saves your DPWV video in the url above, so you can share movies you like!</p>
+        </div>
     </div>
 
     <script>
