--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
         <div class="popular-movies">
             <h2>Popular Movies</h2>
-            <a href="?id=tt1375666">Inception</a>
-            <a href="?id=tt0111161">The Shawshank Redemption</a>
-            <a href="?id=tt0468569">The Dark Knight</a>
-            <a href="?id=tt0137523">Fight Club</a>
+            <a href="?id=tt6263850">Deadpool & Wolverine - R</a>
+            <a href="?id=tt7510222">Despicable Me 4 - PG</a>
+            <a href="?id=tt0468569">The Dark Knight - PG13</a>
+            <a href="?id=tt1630029">Avatar Way Of The Water - PG13</a>
             <a href="?id=tt0109830">Forrest Gump</a>
         </div>
     </div>
