--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <a href="?id=tt7510222">Despicable Me 4 - PG</a>
             <a href="?id=tt0468569">The Dark Knight - PG13</a>
             <a href="?id=tt1630029">Avatar Way Of The Water - PG13</a>
-            <a href="?id=tt0109830">Forrest Gump</a>
+            <a href="?id=tt0109830">Forrest Gump - PG13</a>
         </div>
     </div>
 
