Update index.html - Added META Tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Watch Any Movie, 100% Free - No Signup Required.">
+    <meta name="keywords" content="Deadpool 3, Deadpool and Wolverine, Free Movies, IMDB, Despicable Me 3, Where to watch Deadpool 3">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Picture Web Vault</title>
     <link rel="icon" href="favicon.png" type="image/png"> <!-- Add favicon -->
