--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <button onclick="loadVideo()">Load Video</button>
         
         <!-- Theme toggle button for mobile devices -->
-        <button class="mobile-theme-toggle" onclick="toggleTheme()">Turn The Lights Out</button>
+        <button class="mobile-theme-toggle" onclick="toggleTheme()">Light Switch</button>
 
         <div class="video-container" id="video-container">
             <iframe id="video-embed" src="" allowfullscreen></iframe>
