--- a/index-old.html
+++ b/index-old.html
@@ -14,8 +14,6 @@
             margin: 0;
             padding: 0;
             transition: background-color 0.3s, color 0.3s;
-            background-color: var(--bg-color);
-            color: var(--text-color);
         }
         .container {
             max-width: 800px;
@@ -23,36 +21,31 @@
             padding: 20px;
             background-color: var(--bg-color);
             color: var(--text-color);
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             position: relative;
         }
         h1 {
             text-align: center;
-            margin-bottom: 20px;
-            font-size: 24px;
         }
         label, input, button {
             display: block;
-            width: calc(100% - 22px);
-            margin: 10px auto;
+            width: 100%;
+            margin: 10px 0;
             font-size: 16px;
         }
         input[type="text"] {
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            font-size: 16px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
         button {
-            padding: 12px;
+            padding: 10px;
             border: none;
-            border-radius: 6px;
-            background-color: #007bff;
+            border-radius: 4px;
+            background-color: #007BFF;
             color: #fff;
-            font-size: 16px;
             cursor: pointer;
-            transition: background-color 0.3s;
         }
         button:hover {
             background-color: #0056b3;
@@ -66,46 +59,24 @@
             width: 100%;
             height: 400px;
             border: none;
-            border-radius: 6px;
         }
-        .instructions, .popular-movies {
+        .instructions {
             margin-top: 20px;
         }
-        .instructions h2, .popular-movies h2 {
-            font-size: 20px;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 5px;
-        }
-        .instructions p, .popular-movies a {
-            font-size: 16px;
-            line-height: 1.5;
-        }
-        .popular-movies a {
-            display: block;
-            margin: 5px 0;
-            color: #007bff;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-        .popular-movies a:hover {
-            color: #0056b3;
-            text-decoration: underline;
-        }
         .theme-switcher {
-        margin-top: 10px; /* Adjust this value if needed to add more space between the buttons */
-        cursor: pointer;
-        font-size: 24px;
-        color: var(--icon-color);
-        transition: color 0.3s;
-        text-align: center;
-        position: relative; /* Ensure it aligns within its container */
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            font-size: 24px;
+            color: var(--icon-color);
         }
-
         .dark-mode {
             --bg-color: #333;
             --text-color: #f5f5f5;
             --icon-color: #f5f5f5;
+            background-color: #333;
+            color: #f5f5f5;
         }
         .light-mode {
             --bg-color: #f5f5f5;
@@ -118,14 +89,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(255, 255, 255, 0.7); /* Slightly visible overlay */
+            background-color: rgba(255, 255, 255, 0); /* Transparent overlay */
             z-index: 1;
-        }
-        .logo {
-            display: block;
-            margin: 0 auto 20px auto;
-            width: 200px;
-            max-width: 100%;
         }
         /* Mobile-friendly styles */
         @media (max-width: 768px) {
@@ -136,44 +101,66 @@
             iframe {
                 height: 300px;
             }
+            /* Move theme switcher below search bar on mobile */
             .mobile-theme-toggle {
                 display: block;
                 margin: 10px 0;
-                background-color: #007bff;
-                color: #fff;
-                border: none;
-                border-radius: 6px;
-                padding: 10px;
-                font-size: 16px;
-                cursor: pointer;
             }
             .theme-switcher {
                 display: none;
             }
         }
+        /* Popular Movies Section */
+        .popular-movies {
+            margin-top: 20px;
+        }
+        .popular-movies a {
+            display: block;
+            margin: 5px 0;
+            color: #007BFF;
+            text-decoration: none;
+        }
+        .popular-movies a:hover {
+            text-decoration: underline;
+        }
+        /* Replace Title with Logo */
+        .logo {
+            display: block;
+            margin: 0 auto 20px auto;
+            width: 200px;
+        }
     </style>
 </head>
-
+<body class="light-mode">
+    <div class="theme-switcher" onclick="toggleTheme()">
+        <i id="theme-icon" class="fas fa-moon"></i>
+    </div>
     <div class="container">
+        <!-- Replace title with logo -->
         <img src="logo.png" alt="Digital Picture Web Vault" class="logo">
+
+    </div>
         <p>A note from DPWV: Sorry about the ads, just keep clicking the video and it will eventually play. DPWV does not operate 2Embed, the company that hosts our videos, and so we can't control the ads. Sorry, and happy streaming!</p>
+    </div>
+    
         <label for="imdb-id">Enter IMDB ID:</label>
         <input type="text" id="imdb-id" placeholder="e.g., tt1234567">
         <button onclick="loadVideo()">Load Video</button>
-        <div class="theme-switcher" onclick="toggleTheme()">
-            <i id="theme-icon" class="fas fa-moon"></i>
-        </div>
-
         
+        <!-- Theme toggle button for mobile devices -->
+        <button class="mobile-theme-toggle" onclick="toggleTheme()">Light Switch</button>
+
         <div class="video-container" id="video-container">
             <iframe id="video-embed" src="" allowfullscreen></iframe>
             <div class="overlay" id="overlay"></div> 
         </div>
+
         <div class="instructions">
             <h2>How to Find the IMDB ID</h2>
             <p>The IMDB ID is a unique identifier for movies on IMDB. It usually starts with 'tt' followed by a series of numbers. For example, the IMDB ID for the movie 'Inception' is 'tt1375666'.</p>
             <p>To find the IMDB ID, visit the IMDB website and search for the movie. Look at the URL of the movie's page; it will look something like this: <code>https://www.imdb.com/title/tt1234567/</code>.</p>
         </div>
+
         <div class="popular-movies">
             <h2>Popular Movies</h2>
             <a href="#" onclick="redirectToMovie('tt6263850')">Deadpool & Wolverine - R</a>
@@ -182,14 +169,17 @@
             <a href="#" onclick="redirectToMovie('tt1630029')">Avatar Way Of The Water - PG13</a>
             <a href="#" onclick="redirectToMovie('tt0109830')">Forrest Gump - PG13</a>
         </div>
+
     </div>
 
     <script>
+        // Redirect to movie while keeping the theme
         function redirectToMovie(imdbId) {
             const theme = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
             window.location.href = `?id=${imdbId}&theme=${theme}`;
         }
 
+        // Load video and update URL
         function loadVideo() {
             const imdbId = document.getElementById('imdb-id').value;
             const videoContainer = document.getElementById('video-container');
@@ -209,6 +199,7 @@
             history.replaceState(null, null, `?id=${imdbId}&theme=${theme}`);
         }
 
+        // Toggle theme and update URL
         function toggleTheme() {
             const body = document.body;
             const themeIcon = document.getElementById('theme-icon');
@@ -229,6 +220,7 @@
             history.replaceState(null, null, `?id=${imdbId}&theme=${body.classList.contains('dark-mode') ? 'dark' : 'light'}`);
         }
 
+        // Apply settings on page load
         window.onload = function() {
             const params = new URLSearchParams(window.location.search);
             const imdbId = params.get('id');
