--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         
         <div class="video-container" id="video-container">
-            <iframe id="video-embed" src="" allowfullscreen></iframe>
+            <iframe id="video-embed" sandbox="allow-same-origin allow-scripts allow-forms" src="" allowfullscreen></iframe>
             <div class="overlay" id="overlay"></div> 
         </div>
         <div class="instructions">
