--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <div class="container">
         <img src="logo.png" alt="Digital Picture Web Vault" class="logo">
-        <p>A note from DPWV: Sorry about the ads, just keep clicking the video and it will eventually play. DPWV does not operate 2Embed, the company that hosts our videos, and so we can't control the ads. Sorry, and happy streaming!</p>
+        <p>A note from DPWV: Ads have been removed! Happy steaming!</p>
         <label for="imdb-id">Enter IMDB ID:</label>
         <input type="text" id="imdb-id" placeholder="e.g., tt1234567">
         <button onclick="loadVideo()">Load Video</button>
