--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <div class="container">
         <img src="logo.png" alt="Digital Picture Web Vault" class="logo">
-        <p>A note from DPWV: Ads have been removed, unfortunately, the servers "Vsrc" & "Multi" are unavailable because of this. If you would rather ads but have these servers available, <a href="mailto:hwarren@psd0620.org?subject=DPWV%20-%20Ads%20Appeal&bcc=rhenrywarren@gmail.com&body=I%20would%20like%20ads%20and%20more%20servers%20(Type%20Below%20This)%0A%0A%3Cp%3EA%20note%20from%20DPWV:%20Ads%20have%20been%20removed,%20unfortunately,%20the%20servers%20'Vsrc'%20%26%20'Multi'%20are%20unavailable%20because%20of%20this.%20If%20you%20would%20rather%20ads%20but%20have%20these%20servers%20available,%20email%20hwarren@psd0620.org.%20Happy%20streaming!%3C/p%3E">email hwarren@psd0620.org</a>. Happy streaming!</p>
+        <p>A note from DPWV: Ads have been removed, unfortunately, the servers "Vsrc" & "Multi" are unavailable because of this. If you would rather ads but have these servers available, email <a href="mailto:hwarren@psd0620.org?subject=DPWV%20-%20Ads%20Appeal&bcc=rhenrywarren@gmail.com&body=I%20would%20like%20ads%20and%20more%20servers%20(Type%20Below%20This)%0A%0A%3Cp%3EA%20note%20from%20DPWV:%20Ads%20have%20been%20removed,%20unfortunately,%20the%20servers%20'Vsrc'%20%26%20'Multi'%20are%20unavailable%20because%20of%20this.%20If%20you%20would%20rather%20ads%20but%20have%20these%20servers%20available,%20email%20hwarren@psd0620.org.%20Happy%20streaming!%3C/p%3E">hwarren@psd0620.org</a>. Happy streaming!</p>
 
         <label for="imdb-id">Enter IMDB ID:</label>
         <input type="text" id="imdb-id" placeholder="e.g., tt1234567">
