--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="keywords" content="Deadpool 3, Deadpool and Wolverine, Free Movies, IMDB, Despicable Me 3, Where to watch Deadpool 3">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Picture Web Vault</title>
-    <link rel="icon" href="favicon.png" type="image/png"> <!-- Add favicon -->
+    <link rel="icon" href="favicon.png" type="image/png"> 
+      <link rel="apple-touch-icon" href="favicon.png "><!-- Add favicon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
